--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"eslint-plugin-svelte": "^2.46.0",
 		"globals": "^15.12.0",
 		"husky": "^9.1.6",
+		"mdsvex": "^0.11.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.8",
 		"svelte": "^5.2.0",
