--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.15.0",
 		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"trix": "^2.1.8"
 	}
 }
